--- a/tickets.php.save.1
+++ b/tickets.php.save.1
@@ -4,6 +4,7 @@ require_once './vendor/autoload.php';
 
 $tobeprinted_dir = 'pulllist/tickets/tobeprinted';
 $printed_dir = 'pulllist/tickets/printed';
+$aantal=0;
 //$mpdf = new \Mpdf\Mpdf();
 function cmp($a,$b) {
 //  het is makkelijker als je wilt zoeken naar recent NIET afgedrukte bonnen als je op datum sorteert. [aad]
@@ -13,15 +14,16 @@ function cmp($a,$b) {
 
 function generateRows($dir,$template_file) {
   $files = scandir($dir);
-  $aantal=0;
+
   $rows = array();
   foreach ($files as $file) {
     if(strpos($file,"html")>0){
       //get data
+$aantal++;
       $doc = new DOMDocument();
       $doc->loadHTMLFile($dir.'/'.$file,LIBXML_NOWARNING | LIBXML_NOERROR);
       $data = array();
-      $data['date'] = $doc->getElementById('date')->textContent ;
+      $data['date'] = $doc->getElementById('reqDate')->textContent ;
       $data['shelf'] = $doc->getElementById('shelf') ? $doc->getElementById('shelf')->textContent : ' ';
       $data['callNumber'] = $doc->getElementById('callNumber')->textContent ;
       $data['title'] = $doc->getElementById('title')->textContent ;
@@ -33,10 +35,10 @@ function generateRows($dir,$template_file) {
       $rows[] = $data;
     }
   } 
+echo "aantal: ".$aantal;
   usort($rows,"cmp");
   foreach ($rows as $row) {   
-      $aantal++;
-      $row = array_merge(array('no'=>$aantal),$row);
+$aantal++;
       $loader = new Twig_Loader_Filesystem(__DIR__);
       $twig = new Twig_Environment($loader, array(
       //specify a cache directory only in a production setting
@@ -45,7 +47,7 @@ function generateRows($dir,$template_file) {
 
 
       $html_row = $twig->render($template_file, $row);
-      echo $html_row;
+      echo $aantal.".o".$html_row;
   
   }
 
@@ -94,7 +96,6 @@ function generateRows($dir,$template_file) {
     <div class="divTable paleBlueRows">
       <div class="divTableHeading">
         <div class="divTableRow">
-          <div class="divTableHead">#</div>
           <div class="divTableHead">Date</div>
           <div class="divTableHead">Shelving location</div>
           <div class="divTableHead">Call number</div>
@@ -115,7 +116,6 @@ function generateRows($dir,$template_file) {
     <div class="divTable paleBlueRows">
       <div class="divTableHeading">
         <div class="divTableRow">
-          <div class="divTableHead">#</div>
           <div class="divTableHead">Date</div>
           <div class="divTableHead">Shelving location</div>
           <div class="divTableHead">Call number</div>
